--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -1,13 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <title>{{ book.title }}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Book List</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>{{ book.title }}</h1>
-    <p>Author: {{ book.author }}</p>
-    <p>Published Date: {{ book.published_date }}</p>
-    <p>ISBN: {{ book.isbn }}</p>
-    <a href="{% url 'book_list' %}">Back to list</a>
+    <main class="min-h-[100vh] py-20 pb-20 flex flex-col justify-center items-center bg-gradient-to-r from-indigo-200 via-sky-300 to-purple-200">
+        <h3 class=" pb-10 font-bold text-5xl text-purple-900">Details of {{ book.title }} Book</h3>
+
+            
+            <div class="rounded-lg hover:bg-black/50 transition cursor-pointer backdrop-blur-lg bg-black/30 gap-10 text-white font-bold p-20 flex flex-col">
+                <strong class="block text-3xl text-center">Title: {{ book.title }}</strong>
+                    <span class="block w-full text-center text-yellow-500 text-3xl">Author name: {{ book.author }}</span>
+                    <span class="block w-full text-center text-yellow-500 text-3xl">published date: {{ book.published_date }}</span>
+                    <span class="block w-full text-center text-yellow-500 text-3xl">isbn: {{ book.isbn }}</span>
+
+            </div>
+
+        
+    </main>
 </body>
 </html>
